reafactored interview for some simplificity. made it much easier to make and run child functions. created a helper class which has some test cases. Next thing, make it more obvious how to make an interview, that way we know which args are needed for which mode. Then we need to try and find ways of making better rule shrinking techniques.